--- a/Develop/package.json
+++ b/Develop/package.json
@@ -4,12 +4,12 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "start:dev": "",
-    "start": "",
-    "server": "",
-    "build": "",
-    "install": "",
-    "client": ""
+    "start:dev": "node server.js",
+    "start": "node server.js",
+    "server": "node server.js",
+    "build": "webpack -- mode production ",
+    "install": "npm i",
+    "client": "npm run start --prefix client"
   },
   "keywords": [],
   "author": "",
